--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,9 @@
 <app-titulo></app-titulo>
-<app-big-card></app-big-card>
+<div class="artigos">
+  <div class="big">
+    <app-big-card></app-big-card>
+  </div>
+  <div class="small">
+
+  </div>
+</div>
