--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,1 +1,7 @@
-<p>menu works!</p>
+<div class="container-menu">
+<ul>
+  <li><a href="www.google.com">Google</a></li>
+  <li><a href="www.youtube.com">youtube</a></li>
+  <li><a href="#"></a>Sobre</li>
+</ul>
+</div>
