--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,13 @@
+<app-menu></app-menu>
+
 <app-titulo></app-titulo>
 <div class="artigos">
   <div class="big">
     <app-big-card></app-big-card>
   </div>
   <div class="small">
-
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
   </div>
 </div>
