--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,5 +1,4 @@
 .container-big{
-  border: solid 2px white;
   margin: 10px 30px;
   width: 400px;
   height: 500px;
@@ -10,7 +9,7 @@
 }
 .big-card__foto > img{
   width: 100%;
-  max-width: 400px;
+  min-width: 400px;
 }
 .big-card__titulo > h1{
   margin-top: 15px;
