--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,3 +1,26 @@
-*{
-  color: #ffffff;
+.container-small{
+  display: flex;
+  flex-direction: row;
+  margin-top: 3.3px;
+  width: 600px;
+  margin-top: 10px;
+}
+.small-card__foto > img{
+  height: 120px;
+  width: 200px;
+  min-width: 200px;
+  margin-right: 10px;
+}
+.small-card__texto{
+  height: 130px;
+}
+.small-card__titulo > a > h1{
+  display: flex;
+  align-items: flex-start;
+  margin-top: -5px;
+  color:  rgb(100, 98, 95);
+}
+.small-card__descricao > p{
+  height: 55px;
+  overflow: hidden;
 }
