--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,12 @@
-<app-menu></app-menu>
-
 <app-titulo></app-titulo>
 <div class="artigos">
   <div class="big">
-    <app-big-card></app-big-card>
+    <app-big-card id="1"></app-big-card>
   </div>
   <div class="small">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card id="2"></app-small-card>
+    <app-small-card id="3"></app-small-card>
+    <app-small-card id="4"></app-small-card>
+
+    </div>
   </div>
-</div>
